add swagger api docs update
